# travelops-ai-worker

./: .env.example  .gitattributes  .gitignore  BACKEND_PLATFORM_DELIVERY_ROADMAP.md  BLUEPRINT.md  ENGINEERING_CONVENTIONS.md  IMPLEMENTATION_PLAN.md  README.md  compose.dev.yaml
backend/: .dockerignore  .env.example  Containerfile  README.md  container-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/api/: __init__.py  errors.py  middleware.py
backend/app/domain/: __init__.py  audit.py  context.py  policies.py  proposals.py  runs.py  tasks.py  tooling.py
backend/app/evaluation/: __init__.py  retrieval.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  deterministic.py  gateway.py
backend/app/orchestration/: __init__.py  refund_graph.py  state.py
backend/app/persistence/: __init__.py  checkpoints.py  database.py  models.py  orchestration_repositories.py  repositories.py  tool_repositories.py
backend/app/retrieval/: __init__.py  embeddings.py  ingest.py  retriever.py
backend/app/services/: __init__.py  orchestration_service.py  run_service.py  task_read_service.py  task_service.py  tool_service.py
backend/app/tools/: __init__.py  contracts.py  errors.py  provider_tools.py  redaction.py  registry.py
backend/evaluations/retrieval/: golden.json
backend/migrations/: env.py
backend/migrations/versions/: 20260703_0001_core_persistence.py  20260704_0003_tool_attempts.py  (+3 more)
backend/scripts/: ingest_policies.py  run_retrieval_benchmark.py  seed_demo.py  setup_checkpoints.py
(+146 files in other folders)
